# etched-3

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  errors.rs  main.rs  models.rs  state.rs  tests.rs
backend/src/handlers/: admin.rs  auth.rs  certificates.rs  metadata.rs  mod.rs  pools.rs  requests.rs  validators.rs
backend/src/middleware/: auth.rs  mod.rs
contracts/: .env.example  CertificateSBT.sol  deployment.json  hardhat.config.js  package-lock.json  package.json
contracts/core/: CertificateLogic.sol  ValidatorRegistry.sol
contracts/interfaces/: ICertificateSBT.sol
contracts/scripts/: deploy-lisk.js  deploy.js
contracts/src/: CertificateSBT.sol
contracts/src/core/: CertificateLogic.sol  ValidatorRegistry.sol
contracts/src/interfaces/: ICertificateSBT.sol
contracts/test/: CertificateSBT.test.js
docs/: API.md  TESTING.md
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Spinner.module.css  Spinner.tsx  Toast.module.css  Toast.tsx
frontend/src/lib/: api.ts  contract.ts  ipfs.ts
scripts/: start-local.sh
