[package]
name = "etched-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
ethers-core = "2"
thiserror = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-rustls"] }
bcrypt = "0.15"
rand = "0.8"

[profile.release]
opt-level = 3
